syntax = "proto3";
package proto;

message APIRegistQuotaReq {
    bytes   RCType                          = 1; // 资源类型
    uint32  Quota                           = 2; // 资源配额
    int64   ResetInterval                   = 3; // 资源重置配额时间间隔，单位秒

    // 以下字段仅内部使用
    int64   Timestamp                       = 4;
}

message APIRegistQuotaResp {
    uint32  Code                            = 1;
    string  Msg                             = 2;
}

message APIBorrowReq {
    bytes   RCType                          = 1;
    bytes   ClientID                        = 2;
    int64   Expire                          = 3;

    // 以下字段仅内部使用
    int64   Timestamp                       = 4;
}

message APIBorrowResp {
    uint32  Code                            = 1;
    string  Msg                             = 2;
    string  RCID                            = 3;
}

message APIReturnReq {
    bytes   ClientID                        = 1;
    string  RCID                            = 2;
}

message APIReturnResp {
    uint32  Code                            = 1;
    string  Msg                             = 2;
}

message APIReturnAllReq {
    bytes   ClientID                        = 1;
    bytes   RCType                          = 2;
}

message APIReturnAllResp {
    uint32  Code                            = 1;
    string  Msg                             = 2;
}

message CMDLeaderNotify {
    string RaftAddr                         = 1;
    string HttpAddr                         = 2;
}

message CMDRecycle {
    int64  Timestamp                        = 1;
}
